--- a/projects/app/src/app/messages/messages.component.html
+++ b/projects/app/src/app/messages/messages.component.html
@@ -1,9 +1,9 @@
-<div *ngIf="messageService.messages.length">
-
-  <h2>Messages</h2>
-  <button type="button"
-          class="clear"
-          (click)="messageService.clear()">Clear messages</button>
-  <div *ngFor="let message of messageService.messages"> {{message}} </div>
-
+<div *ngIf="messages$ | async as messages">
+  <div *ngIf="messages.length">
+    <h2>Messages</h2>
+    <button type="button"
+            class="clear"
+            (click)="clearMessages()">Clear messages</button>
+    <div *ngFor="let message of messages"> {{message}} </div>
+  </div>
 </div>
