--- a/projects/app/src/app/dashboard/dashboard.component.html
+++ b/projects/app/src/app/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 <h2>Top Heroes</h2>
 <div class="heroes-menu" *ngIf="heroes$ | async as heroes">
   <a *ngFor="let hero of heroes"
-    routerLink="/detail/{{hero.id}}">
+    routerLink="/details/{{hero.id}}">
     {{hero.name}}
   </a>
 </div>
